# otus_4

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  config.h  config.h.in  main.cpp  utils.cpp  utils.h  version.cpp  version.h
tests/: CMakeLists.txt  test_print_ip.cpp
